--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dashboard": "webpack-dashboard -- npm start",
     "build:prod": "rm -rf public/* && webpack --config webpack.prod.js",
     "bundle-report": "webpack --profile --json > stats.json && webpack-bundle-analyzer  --port 9000 stats.json",
-    "deploy": "cp ./CNAME ./public && gh-pages -d public"
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
