--- a/package.json
+++ b/package.json
@@ -23,12 +23,23 @@
   },
   "homepage": "https://adrijshikhar.github.io/spotify-player/",
   "dependencies": {
+    "cookie-parser": "1.3.2",
+    "cors": "^2.8.4",
     "dotenv-webpack": "^1.7.0",
+    "express": "^4.16.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.0",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.83.0",
+    "spotify-web-api-js": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
