--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.4",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
