--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 AUTH_ENDPOINT="https://accounts.spotify.com/authorize"
 CLIENT_ID=<enter your client id>
-REDIRECT_URI="http://localhost:8000"
+REDIRECT_URI="http://localhost:8888/callback"
 SCOPES=["user-read-currently-playing", "user-read-playback-state"]
+
+
+SERVER_PORT=8888
+CLIENT_PORT=8000
