--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:prod": "rm -rf public/* && webpack --config webpack.prod.js",
     "bundle-report": "webpack --profile --json > stats.json && webpack-bundle-analyzer  --port 9000 stats.json",
     "deploy": "gh-pages -d public",
-    "lint":"eslint --fix src server"
+    "lint": "eslint --fix src server"
   },
   "repository": {
     "type": "git",
@@ -40,8 +40,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "request": "^2.83.0",
-    "spotify-web-api-js": "^1.2.0"
+    "superagent": "^5.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
