moved creds to .env lint fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 AUTH_ENDPOINT="https://accounts.spotify.com/authorize"
 CLIENT_ID=<enter your client id>
+CLIENT_SECRET<enter your client secret>
 SERVER_URI="http://localhost:8888/"
 REFRESH_TOKEN_URI="http://localhost:8888/refresh_token"
 REDIRECT_URI="http://localhost:8888/callback"
